payment: make next_url a fully qualified URL
The checkout_endpoint config represents the endpoint of a future
"checkout" app which is currently named "pay". This is the app that a
user pays a payment through.

It's necessary to configure the checkout_endpoint config in dev
because the frontend is run under create-react-app under port 3000.
